export clientpopup mapping state and use it to skip mouse driven focus changes

BUG: 81743
FIXED-IN: 4.9
REVIEW: 104620